--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ body {
     -webkit-box-shadow: 0px 2px 9px 0px rgba(0,0,0,0.71);
     -moz-box-shadow:0px 2px 9px 0px rgba(0,0,0,0.71);
     box-shadow: 0px 2px 9px 0px rgba(0,0,0,0.71);
+    border-radius: 10px;
 }
 
 h1, h2 {
@@ -65,6 +66,63 @@ form leyend {
 leyend span {
     font-size: 1rem;
     margin-top: 1rem;
+    margin-bottom: 2rem;
     clear: both;
     display: block;
+}
+
+@media (min-width:760px) {
+    .campos {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .campo {
+        flex: 0 0 calc(33.3% - 1rem);
+    }
+}
+
+.campo {
+    padding: .5rem 0;
+}
+
+.campo label {
+    font-size: 1.2rem;
+}
+
+.campo input[type="text"],
+.campo input[type="tel"] {
+    width: 100%;
+    border: none;
+    padding: .5rem;
+    height: 3rem;
+    margin-top: .5rem;
+    font-size: 1.2rem;
+}
+
+.enviar {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.campo input[type="submit"] {
+    background-color: var(--primary);
+    border: none;
+    color: #fff;
+    padding: 1rem 4rem;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    transition: background-color .5s ease-in-out;
+    flex: 1;
+}
+
+.campo input[type="submit"]:hover {
+    cursor: pointer;
+    background-color: var(--primariooscuro);
+}
+
+@media (min-width:760px) {
+    .campo input[type="submit"] {
+        flex: 0 0 auto;
+    }
 }
