--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,14 @@ body {
     background-color: var(--secundary);
 }
 
+.bg-blanco {
+    background-color: #fff;
+}
+
 .sombra {
-    -webkit-box-shadow: 0px 2px 9px 0px rgba(0,0,0,0.71);
-    -moz-box-shadow:0px 2px 9px 0px rgba(0,0,0,0.71);
-    box-shadow: 0px 2px 9px 0px rgba(0,0,0,0.71);
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
+    -moz-box-shadow:0px 2px 5px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
     border-radius: 10px;
 }
 
@@ -45,6 +49,11 @@ h1, h2 {
 h1 {
     padding: 20px;
     color: #fff;
+}
+
+h2 {
+    font-size: 2rem;
+    color: var(--primary);
 }
 
 .contenedor-barra {
@@ -125,4 +134,84 @@ leyend span {
     .campo input[type="submit"] {
         flex: 0 0 auto;
     }
+}
+
+
+
+
+.contactos {
+    padding: 2rem;
+    margin-top: 2.3rem;
+}
+
+.contenedor-contactos {
+    max-width: 800px;
+    margin: 4rem auto 0 auto;
+}
+
+.total-contactos {
+    font-family: var(--fuentesecundaria);
+    margin: 2rem;
+    text-align: center;
+    color: var(--primary);
+    font-size: 2rem;
+}
+
+.total-contactos span {
+    font-size: 3rem;
+    font-weight: 900;
+}
+
+.buscador {
+    width: 100%;
+    height: 4rem;
+    padding: 1rem;
+    border: 1px solid #e1e1e1;
+    margin: 2rem 0;
+}
+
+.contenedor-tabla {
+    overflow: scroll;
+}
+
+.Listado-contactos {
+    width: 100%;
+    margin-top: 1rem;
+    border-collapse: collapse;
+}
+
+.Listado-contactos thead {
+    background-color: var(--primary);
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.Listado-contactos thead th {
+    padding: 1rem 0;
+}
+
+.Listado-contactos tbody td {
+    padding: .5rem;
+}
+
+.Listado-contactos tbody td:nth-child(4) {
+    text-align: center;
+}
+
+.Listado-contactos button {
+    background-color: transparent important;
+    border: none;
+}
+
+.btn {
+    font-size: 2rem;
+    text-decoration: none;
+}
+
+.btn-editar {
+    color: var(--secundary);
+}
+
+.btn-borrar {
+    color: var(--primary);
 }
