--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,35 @@ body {
     background-color: #fff;
 }
 
+.barra {
+    display: grid;
+    grid-template-columns: 100px 1fr;
+    align-items: center;
+}
+
+.btn {
+    font-size: 2rem;
+    text-decoration: none;
+}
+
+.btn-editar {
+    color: var(--secundary);
+}
+
+.btn-borrar {
+    color: var(--primary);
+}
+
+.volver {
+    background-color: var(--secundary);
+    border-radius: 5px;
+    text-align: center;
+    color: #000;
+    font-weight: 700;
+    font-size: 1.2rem;
+    padding: .5rem;
+}
+
 .sombra {
     -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
     -moz-box-shadow:0px 2px 5px 0px rgba(0,0,0,0.5);
@@ -203,15 +232,3 @@ leyend span {
     border: none;
 }
 
-.btn {
-    font-size: 2rem;
-    text-decoration: none;
-}
-
-.btn-editar {
-    color: var(--secundary);
-}
-
-.btn-borrar {
-    color: var(--primary);
-}
