crear notificacion de vacio

--- a/css/style.css
+++ b/css/style.css
@@ -232,3 +232,26 @@ leyend span {
     border: none;
 }
 
+
+.notificacion {
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+    padding: 1 rem 3rem;
+    opacity: 0;
+    transition: opacity .5s ease;
+}
+
+.visible {
+    opacity: 1;
+}
+
+.correcto {
+    background-color: rgb(179, 241, 117);
+    color: green;
+}
+
+.error {
+    background-color: rgb(238, 148, 166);
+    color: rgb(163, 0 ,33);
+}
